--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <button type="button" onclick="changeInput(this)">.</button>
                 <button type="submit"">=</button>
             </div>
-            <button class="button__ac" onclick="page.input.value=''">AC</button>
+            <button class="button__ac" type="button" onclick="changeInput(this)">AC</button>
         </form>
     </main>
     <script src="app.js"></script>
